--- a/src/mail/forgot_password.html
+++ b/src/mail/forgot_password.html
@@ -1,101 +1,111 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-BR">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Redefinição de Senha • USARP</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f9f9fb;
-      color: #333;
-      margin: 0;
-      padding: 0;
-    }
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Redefinição de Senha • USARP</title>
+    <style>
+      body {
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        background-color: #f9f9fb;
+        color: #333;
+        margin: 0;
+        padding: 0;
+      }
 
-    .container {
-      max-width: 600px;
-      margin: 40px auto;
-      padding: 24px;
-      background-color: #ffffff;
-      border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
-    }
+      .container {
+        max-width: 600px;
+        margin: 40px auto;
+        padding: 24px;
+        background-color: #ffffff;
+        border-radius: 12px;
+        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
+      }
 
-    .logo {
-      display: block;
-      max-width: 160px;
-      margin: 0 auto 16px;
-    }
+      .logo {
+        display: block;
+        max-width: 160px;
+        margin: 0 auto 16px;
+      }
 
-    .header {
-      background-color: #6c63ff;
-      padding: 24px 16px;
-      text-align: center;
-      border-radius: 12px 12px 0 0;
-    }
+      .header {
+        background-color: #6c63ff;
+        padding: 24px 16px;
+        text-align: center;
+        border-radius: 12px 12px 0 0;
+      }
 
-    .header h1 {
-      margin: 0;
-      color: #fff;
-      font-size: 24px;
-    }
+      .header h1 {
+        margin: 0;
+        color: #fff;
+        font-size: 24px;
+      }
 
-    .content {
-      padding: 24px 16px;
-    }
+      .content {
+        padding: 24px 16px;
+      }
 
-    .content p {
-      font-size: 16px;
-      line-height: 1.6;
-      margin: 16px 0;
-    }
+      .content p {
+        font-size: 16px;
+        line-height: 1.6;
+        margin: 16px 0;
+      }
 
-    .button {
-      display: inline-block;
-      padding: 12px 24px;
-      margin: 24px 0;
-      background-color: #6c63ff;
-      color: #ffffff !important;
-      text-decoration: none;
-      font-size: 16px;
-      border-radius: 6px;
-      text-align: center;
-      transition: background-color 0.3s ease;
-    }
+      .button {
+        display: inline-block;
+        padding: 12px 24px;
+        margin: 24px 0;
+        background-color: #6c63ff;
+        color: #ffffff !important;
+        text-decoration: none;
+        font-size: 16px;
+        border-radius: 6px;
+        text-align: center;
+        transition: background-color 0.3s ease;
+      }
 
-    .button:hover {
-      color: #ffffff !important;
-      background-color: #574fe3;
-    }
+      .button:hover {
+        color: #ffffff !important;
+        background-color: #574fe3;
+      }
 
-    .footer {
-      text-align: center;
-      padding: 16px;
-      font-size: 12px;
-      color: #999999;
-      border-top: 1px solid #eeeeee;
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <img src="http://russas.ufc.br/uploads/61c4bed6f8b2f3eccae2ad2c708916.png" alt="Logo do LUDI" class="logo" />
-    <div class="header">
-      <h1>Redefinição de Senha</h1>
+      .footer {
+        text-align: center;
+        padding: 16px;
+        font-size: 12px;
+        color: #999999;
+        border-top: 1px solid #eeeeee;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <img
+        src="http://russas.ufc.br/uploads/61c4bed6f8b2f3eccae2ad2c708916.png"
+        alt="Logo do LUDI"
+        class="logo"
+      />
+      <div class="header">
+        <h1>Redefinição de Senha</h1>
+      </div>
+      <div class="content">
+        <p>Olá,</p>
+        <p>
+          Recebemos uma solicitação para redefinir sua senha. Para continuar,
+          clique no botão abaixo:
+        </p>
+        <p style="text-align: center">
+          <a href="{{ reset_link }}" class="button">Redefinir Senha</a>
+        </p>
+        <p>
+          Se você não solicitou essa redefinição, ignore este e-mail ou entre em
+          contato com nossa equipe.
+        </p>
+        <p>Atenciosamente,<br /><strong>Equipe USARP</strong></p>
+      </div>
+      <div class="footer">
+        <p>&copy; 2025 USARP. Todos os direitos reservados.</p>
+      </div>
     </div>
-    <div class="content">
-      <p>Olá,</p>
-      <p>Recebemos uma solicitação para redefinir sua senha. Para continuar, clique no botão abaixo:</p>
-      <p style="text-align: center;">
-        <a href="{{ reset_link }}" class="button">Redefinir Senha</a>
-      </p>
-      <p>Se você não solicitou essa redefinição, ignore este e-mail ou entre em contato com nossa equipe.</p>
-      <p>Atenciosamente,<br><strong>Equipe USARP</strong></p>
-    </div>
-    <div class="footer">
-      <p>&copy; 2025 USARP. Todos os direitos reservados.</p>
-    </div>
-  </div>
-</body>
+  </body>
 </html>
